Fix pagination alignment and size

--- a/app/assets/stylesheets/updated/layouts/help-article.scss
+++ b/app/assets/stylesheets/updated/layouts/help-article.scss
@@ -59,6 +59,7 @@
 
   a {
     text-decoration: none;
+    width: 30%
   }
 
   .label {
@@ -69,6 +70,7 @@
 
   .next {
     float: right;
+    text-align: right;
   }
 
   .previous {
